CHANGES IN VERSION 2.9.2
------------------------

NEW FEATURES

    o Updated to BridgeDb 3.0.21
* Fixed backwards compatibility of map()

CHANGES IN VERSION 2.9.1
------------------------

NEW FEATURES

    o Updated to BridgeDb 3.0.19

CHANGES IN VERSION 2.7.5
------------------------

BUG FIXES

    o Fixed a method definition


CHANGES IN VERSION 2.7.4
------------------------

NEW FEATURES

    o improved code

CHANGES IN VERSION 2.7.3
------------------------

NEW FEATURES

    o Updated to BridgeDb 3.0.14
    o Support primary/secondary identifier annotation
    o Added mapping Bioregistry.io compact identifiers
    o Added getting a DataSource by their Bioregistry.io prefix

BUG FIXES

    o Fixed some metadata in the package Rmd

CHANGES IN VERSION 2.5.0
------------------------

NEW FEATURES

    o Updated to BridgeDb 3.0.13

BUG FIXES

    o Small typo fix in a code example in the Vignette

CHANGES IN VERSION 2.1.2
-------------------------

BUG FIXES

    o Fixed the link to the webpage to download mapping files

CHANGES IN VERSION 1.99.1
-------------------------

BUG FIXES

    o no more downloading of databases in the examples

CHANGES IN VERSION 1.99.0
-------------------------

BUG FIXES

    o Added missing NEWS section for 1.23.1
    o BridgeDb 3.0.0-SNAPSHOT (2020-10-18)

CHANGES IN VERSION 1.23.1
-------------------------

SIGNIFICANT USER-LEVEL CHANGES

    o no longer supports 32bit on Windows

CHANGES IN VERSION 1.21.6
-------------------------

NEW FEATURES

    o adds a getProperties() method
    o adds a maps() method that can map multiple identifiers

SIGNIFICANT USER-LEVEL CHANGES

    o the map() method now returns a data frame

CHANGES IN VERSION 1.21.5
-------------------------

BUG FIXES

    o fixed links in the Vignette and some further clarification

CHANGES IN VERSION 1.21.4
-------------------------

BUG FIXES

    o updated the Apache Derby library to 10.5.3.0 (fixing compatibility with newer ID mapping databases)