@@ -5,6 +5,7 @@ NEW FEATURES
 
     o Updated to BridgeDb 3.0.21
 * Fixed backwards compatibility of map()
+* Fixed returning an empty data frame when no mappings are found for `map()`
 
 CHANGES IN VERSION 2.9.1
 ------------------------
